--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -1,17 +1,24 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
+
+
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
-
-<form action="{{ path("fos_user_security_check") }}" method="post">
+<form  action="{{ path("fos_user_security_check") }}" method="post">
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
-    <div class="bgimg">
-    <div class="w3-display-middle">
-        <div class="w3-container">
-            <div class="w3-section">
+
+    <div class="w3-display-container w3-content w3-center" style="max-width:1500px">
+        {%  image '@AppBundle/public/images/halastoly.jpg' %}<img class="w3-image " src="{{ asset_url }}" alt="Me" width="1500" height="600">{% endimage %}
+
+        <div class="w3-display-topleft w3-padding-large w3-xlarge">
+            <a href="{{ path('startPage') }}" class="w3-button w3-black w3-small w3-wide w3-opacity-min" >Back</a>
+        </div>
+            <div class="w3-display-middle w3-padding-large w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-wide w3-text-white w3-center">
+    <div class="w3-container">
+
                 <label><b>Username</b></label>
     <input class="w3-input w3-border w3-margin-bottom" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
 
@@ -20,10 +27,14 @@
 
     <input  type="checkbox" id="remember_me" name="_remember_me" value="on" />
                 <label><b>Remember me</b></label>
-                <button class="w3-button w3-block w3-gray w3-section w3-padding" type="submit">Log in</button>
+        <button class="w3-button w3-block w3-gray w3-section w3-padding" type="submit"><b>Log in</b></button>
 
-            </div>
-        </div>
+
     </div>
     </div>
-</form>
+
+    </div>
+    </form>
+
+
+
