--- a/app/Resources/views/aboutMe.html.twig
+++ b/app/Resources/views/aboutMe.html.twig
@@ -22,7 +22,7 @@
         </a>
         <a href="{{ path('homepage') }}" class="w3-bar-item w3-button w3-right">HOME</a>
         <a href="{{ path('photoGallery') }}" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-th"></i> PHOTOS</a>
-        <a href="/app/Resources/views/forum.html.twig" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-envelope"></i> FORUM</a>
+        <a href="{{ path('forum') }}" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-envelope"></i> FORUM</a>
         <a href="{{ path('fos_user_security_logout') }}" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
 
         </a>
@@ -136,6 +136,11 @@
         <i class="fa fa-pinterest-p w3-hover-opacity"></i>
         <i class="fa fa-twitter w3-hover-opacity"></i>
         <i class="fa fa-linkedin w3-hover-opacity"></i>
+
+                <div class="w3-center">
+                    <p>&copy; Copyright 2018, Małgorzata Bień </p>
+                </div>
+
          <!-- End footer -->
     </footer>
 
