--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,12 +10,12 @@
             <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
                 <i class="fa fa-bars"></i>
             </a>
-            <a href="/app/Resources/views/default/index.html.twig" class="w3-bar-item w3-button">HOME</a>
+            <a href="{{ path('homepage') }}" class="w3-bar-item w3-button">HOME</a>
             <a href="{{ path('photoGallery') }}" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PHOTOS</a>
-            <a href="/app/Resources/views/forum.html.twig" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> FORUM</a>
-            <a href="/app/Resources/views/default/index.html.twig" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
+            <a href="{{ path('forum') }}" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> FORUM</a>
+            <a href="{{ path('fos_user_security_logout') }}" class="w3-bar-item w3-button w3-right ">LOG OUT</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-                <i class="fa fa-search"></i>
+
             </a>
 
         </div>
@@ -145,6 +145,9 @@
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
         <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
         <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+        <div class="w3-center">
+            <p>&copy; Copyright 2018, Małgorzata Bień </p>
+        </div>
     </footer>
 
 
